# LearnOpenGl

./: .gitignore  CMakeLists.txt  CMakeSettings.json  opengl1_c.cpp  opengl1_c.h
shader/: shader_3.fs  shader_3.vs  shader_texture.fs  shader_texture.vs  shader_vs.hlsl
src/: SHADER_S.h  path.h
